--- a/my_react_app/src/search.css
+++ b/my_react_app/src/search.css
@@ -29,4 +29,41 @@
 
 .CheckBoxSample {
     text-align: left;
-} 
+}
+
+.Search table {
+    border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30vw;
+}
+
+.Search table, td, th {
+    border: 1px solid black;
+    height: 50px;
+    text-align: right;
+    vertical-align: baseline;
+
+}
+
+.Search table input{
+    height: 5vh;
+    width: 10vw;
+}
+
+.Search .button-4{
+    font-family: inherit;
+    width: 10vw;
+    height: 8vh;
+    border:2px solid #333333;
+    text-align:center;
+    cursor:pointer;
+    box-sizing:border-box;
+    overflow:hidden;
+    font-size: medium;
+    float:right;
+    margin-right: 10px;
+}
+
+
+
