--- a/my_react_app/src/App.css
+++ b/my_react_app/src/App.css
@@ -1,5 +1,15 @@
 .App {
   text-align: center;
+  background: #fbf6f1;
+}
+
+.logo{
+  display: inline-block;
+  overflow: hidden;
+  margin-left:auto;
+  margin-right: auto;
+  margin-top: -20px;
+  width: 150px;
 }
 
 .App-logo {
