--- a/my_react_app/src/result.css
+++ b/my_react_app/src/result.css
@@ -1,62 +1,57 @@
 .Items {
-  text-align: center;
+    text-align: center;
 }
 
-.topbar {
-	height: 60px;
-	background-color: #EEEEEE;
-	margin-bottom: 10px;
-}
 
 .photos {
-	width: auto;
-	height: auto;
-	max-width: 100%;
-	max-height: 100%;
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .tdPhoto {
-	width: 150px;
+    width: 150px;
 }
 
 .tdContent {
-	width: 700px;
-	padding: 0;
+    width: 700px;
+    padding: 0;
 }
 
 .itemTable {
-	box-shadow: 0 4px 8px 0 #ddd;
-	margin-bottom: 4px;
-	background-color: #EEEEEE;
-	margin: 0 auto;
+    box-shadow: 0 4px 8px 0 #ddd;
+    margin-bottom: 4px;
+    background-color: #EEEEEE;
+    margin: 0 auto;
 }
 
 .itemHead {
-	text-align: left;
-	padding-left: 10px;
-	cursor: pointer;
+    text-align: left;
+    padding-left: 10px;
+    cursor: pointer;
 }
 
 .category {
-	width: 120px;
-	vertical-align: top;
-	text-align: right;
+    width: 120px;
+    vertical-align: top;
+    text-align: right;
 }
 
 .content {
-	text-align: left;
-	padding-left: 10px;
-	width: 100%;
+    text-align: left;
+    padding-left: 10px;
+    width: 100%;
 }
 
-table, tr, td, th{
-	border: 1px solid white;
-	border-collapse: collapse;
-	padding: 5px;
+.itemTable table, .itemTable tr, .itemTable td, .itemTable th {
+    border: 1px solid white;
+    border-collapse: collapse;
+    padding: 5px;
 }
 
-.noResults{
-	height: 100%;
+.noResults {
+    height: 100%;
 }
 
 #react-paginate ul {
@@ -74,10 +69,10 @@ table, tr, td, th{
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
