--- a/my_react_app/src/search.css
+++ b/my_react_app/src/search.css
@@ -1,4 +1,5 @@
 .Search {
+    margin-top: -80px;
     overflow-y: scroll;
     width: 100%;
 }
@@ -11,7 +12,8 @@
 }
 
 .Filter {
-    width: inherit;
+    width: 100%;
+    min-width: 200px;
     margin: 10px;
     height: 300px;
     border: 1px;
@@ -19,16 +21,17 @@
 }
 
 .FilterWarpper {
-    flex: 1;
-    max-width: 30vw;
-    min-width: 25%;
+    width: 25%;
+    min-width: 200px;
     padding: 10px;
     margin: 10px;
     box-shadow: 0 4px 8px 0 #ddd;
+    background-color: white;
 }
 
 .CheckBoxSample {
     text-align: left;
+    min-width: 200px;
 }
 
 .Search table {
@@ -36,33 +39,39 @@
     margin-left: auto;
     margin-right: auto;
     width: 30vw;
+    height: auto;
+    margin-top: 15px;
+    margin-bottom: 30px;
 }
 
-.Search table, td, th {
-    border: 1px solid black;
-    height: 50px;
+.Search table, .Search td, .Search th {
     text-align: right;
     vertical-align: baseline;
 
 }
 
-.Search table input{
-    height: 5vh;
-    width: 10vw;
+.Search table span{
+    float: left;
+    text-align: left;
 }
 
-.Search .button-4{
+.Search table input{
+    /*height: 5vh;*/
+    /*width: 10vw;*/
+}
+
+.Search .button-4 {
     font-family: inherit;
-    width: 10vw;
-    height: 8vh;
-    border:2px solid #333333;
-    text-align:center;
-    cursor:pointer;
-    box-sizing:border-box;
-    overflow:hidden;
+    width: 100px;
+    height: 50px;
+    border: 2px solid #333333;
+    text-align: center;
+    cursor: pointer;
+    box-sizing: border-box;
+    overflow: hidden;
     font-size: medium;
-    float:right;
-    margin-right: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
