--- a/my_react_app/src/App.css
+++ b/my_react_app/src/App.css
@@ -1,43 +1,49 @@
 .App {
-  text-align: center;
-  background: #fbf6f1;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    flex-grow: 1;
 }
 
-.logo{
-  display: inline-block;
-  overflow: hidden;
-  margin-left:auto;
-  margin-right: auto;
-  margin-top: -20px;
-  width: 150px;
+.innerApp {
+    flex-grow: 1;
+}
+
+.logo {
+    display: inline-block;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -20px;
+    width: 150px;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+    animation: App-logo-spin infinite 20s linear;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
