--- a/my_react_app/src/detail.css
+++ b/my_react_app/src/detail.css
@@ -4,7 +4,7 @@ body {
 
 .Detail {
     font-family: Futura, Helvetica, Arial, sans-serif;
-
+    width: 100%;
 
 }
 
@@ -13,6 +13,7 @@ h3 {
 }
 
 .up {
+    flex-grow: 1;
     display: flex;
     flex-direction: row;
     padding: 0 5% 20px 5%;
@@ -29,6 +30,8 @@ h3 {
     padding: 2%;
     height: fit-content;
     width: 50%;
+    display: flex;
+    flex-direction: column;
 }
 
 .right {
@@ -42,11 +45,12 @@ h3 {
 }
 
 .figure {
+    flex-grow: 1;
     box-shadow: 0 4px 8px 0 #ddd;
     transition: 0.4s;
     display: block;
-    width: 100%;
-    max-height: 200px;
+    width: inherit;
+    /*max-height: 200px;*/
     max-width: 200px;
     border: 1px solid #ddd;
     margin-bottom: 20px;
