--- a/my_react_app/src/search.css
+++ b/my_react_app/src/search.css
@@ -38,15 +38,22 @@
     border-collapse: collapse;
     margin-left: auto;
     margin-right: auto;
-    width: 30vw;
     height: auto;
     margin-top: 15px;
     margin-bottom: 30px;
+  table-layout: fixed;
 }
+.Search tbody{
+    width: 100%;
 
+}
+.Search td{
+    width: 25%;
+
+}
 .Search table, .Search td, .Search th {
     text-align: right;
-    vertical-align: baseline;
+    vertical-align: center;
 
 }
 
@@ -56,6 +63,8 @@
 }
 
 .Search table input{
+    vertical-align: center;
+	
     /*height: 5vh;*/
     /*width: 10vw;*/
 }
