--- a/my_react_app/src/result.css
+++ b/my_react_app/src/result.css
@@ -71,9 +71,10 @@
 }
 
 .noResults {
-    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 	font-size:15pt;
-    padding-top: 50%;
 }
 
 #react-paginate ul {
