--- a/my_react_app/src/search.css
+++ b/my_react_app/src/search.css
@@ -34,6 +34,11 @@
     min-width: 200px;
 }
 
+.checkbox {
+    cursor: pointer;
+    display: inline;
+}
+
 .Search table {
     border-collapse: collapse;
     margin-left: auto;
