fix typo inscriptions/logo + url in detail page

--- a/my_react_app/src/detail.css
+++ b/my_react_app/src/detail.css
@@ -82,6 +82,15 @@ h3 {
     overflow-wrap: break-word;
 }
 
+.row_em {
+    font-size: larger;
+    border-bottom: #333333 solid 2px;
+    display: flex;
+    margin: 10px;
+    overflow-wrap: break-word;
+}
+
+
 .field_des {
     padding: 10px;
     margin-right: 10%;
